--- a/scimap/templates/scimap/node.html
+++ b/scimap/templates/scimap/node.html
@@ -4,24 +4,14 @@
 	<meta charset="UTF-8">
 	<title>Стандартик</title>
 
-	<script src="static/libs/jquery/dist/jquery.min.js"></script>
-
-	<script src="static/scripts/index.js"></script>
-
 </head>
 <body>
-	
-	<h2>Димон-валет</h2>
-
-	{% for node in nodes %}
-	<a href="/node/{{ node.id }}"><div>
-
+	<div>
 		<div><h3>{{ node.title }}</h3></div>
 		<div>{{ node.description }}</div>
 		<br>
 		<div>node.created:{{ node.created }}</div>
 		<div>node.updated:{{ node.updated }}</div>
-	</div></a>
-	{% endfor %}
+	</div>
 </body>
 </html>
