--- a/scimap/templates/scimap/index.html
+++ b/scimap/templates/scimap/index.html
@@ -23,8 +23,7 @@
 	</div>
 
 	<div class="info">
-		<!-- <search></search> -->
-		<search on-select="onSelect($event)"></search>
+		<search on-select="onSelect"></search>
 	</div>
 
 </body>
