--- a/scimap/static/styles/index.css
+++ b/scimap/static/styles/index.css
@@ -4,17 +4,21 @@ html, body {
 	padding: 0;
 }
 .map {
-	width: calc(100% - 310px);
+	width: calc(100% - 400px);
 	display: inline-block;
 	float: left;
 
 }
 .info {
-	width: 300px;
-	padding: 15px;
+	width: 400px;
 	display: inline-block;
 	background: white;
 	border-left: 1px solid #d6d6d6;
 	height: 100%;
 	float: left;
+}
+.info .search-field {
+	padding: 20px 15px;
+	border-bottom: 1px solid #d6d6d6;
+	background: #fafafa;
 }
