--- a/scimap/static/styles/index.css
+++ b/scimap/static/styles/index.css
@@ -9,7 +9,7 @@ html, body {
 	float: left;
 
 }
-.info {
+.panel {
 	width: 400px;
 	display: inline-block;
 	background: white;
@@ -17,8 +17,11 @@ html, body {
 	height: 100%;
 	float: left;
 }
-.info .search-field {
+.panel .search-field {
 	padding: 20px 15px;
 	border-bottom: 1px solid #d6d6d6;
 	background: #fafafa;
+}
+.panel .info-field {
+	padding: 0px 20px 15px;
 }
